--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,13 +1,15 @@
 .root {
   background-color: lightblue;
 
-  .top {
-    .logo {
-    }
+  // .top {
+  //   .logo {
 
-    .phone {
-    }
-  }
+  //   }
+
+  //   .phone {
+
+  //   }
+  // }
 
   .content {
     background-color: coral;
