--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,13 +11,15 @@ body {
   text-transform: uppercase;
 }
 
-.button {
-}
+// .button {
+
+// }
 
 .container {
   background-color: yellowgreen;
   width: 1200px;
 }
 
-.social-links {
-}
+// .social-links {
+
+// }
