--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,15 +1,11 @@
-$bgcolor: #ffffff;
-$color: #2c2b2b;
-$min-width: 320px;
+// Colors
+$white: #ffffff;
+$black: #2c2b2b;
+$grey: #c4c4c4;
 
-$container-width: 1200px;
-
-// Default font
-$font-family: "Oswald", sans-serif;
-$font-weight: 300;
-$font-size: 18px;
-$line-height: 27px;
-// (end of) Default font
+$dark-purple: #21062a;
+$purple: #5a0d67;
+// (end of) Colors
 
 // Breakpoints
 $mw: 1080;
@@ -19,3 +15,16 @@ $md: 991.98;
 $lg: 1199.98;
 $xl: 1399.98;
 // (end of) Breakpoints
+
+// Default font
+$font-family: "Oswald", sans-serif;
+$font-weight: 300;
+$font-size: 18px;
+$line-height: 27px;
+// (end of) Default font
+
+$bgcolor: $white;
+$color: $black;
+$min-width: 320px;
+
+$container-width: 1200px;
