Add header interactive elements focus and active styles

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,11 @@
 
   padding: 47px 0 0;
 
+  a:focus,
+  a:active {
+    outline: 1px solid $white;
+  }
+
   .top {
     @include flexbox();
     justify-content: space-between;
