--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,8 +1,57 @@
-@mixin flexbox() {
+@import "./variables";
+
+@mixin flexbox {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
+
   display: flex;
   font-size: 0;
 }
+
+@mixin flexboxInline {
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -moz-inline-box;
+  display: -ms-inline-flexbox;
+
+  display: inline-flex;
+  font-size: 0;
+}
+
+// Default font
+@mixin defaultFont {
+  font-family: "Oswald", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+// (end of) Default font
+
+// Titles font
+@mixin titleFont {
+  font-size: 72px;
+  line-height: 107px;
+}
+
+@mixin sectionTitleFont {
+  font-size: 36px;
+  line-height: 53px;
+  color: $dark-purple;
+}
+
+@mixin contentTitleFont {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 27px;
+  color: $purple;
+}
+
+@mixin itemTitleFont {
+  font-size: 24px;
+  line-height: 36px;
+  color: $black;
+}
+// (end of) Titles font
