--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -1,4 +1,5 @@
-@import "_variables.scss";
+@import "./variables";
+@import "./mixins";
 
 * {
   margin: 0;
@@ -49,12 +50,9 @@ body {
   background-color: $bgcolor;
 
   color: $color;
-  line-height: 1;
-  line-height: $line-height;
-  font-family: $font-family;
-  font-weight: $font-weight;
   font-size: 100%;
-  font-size: $font-size;
+  line-height: 1;
+  @include defaultFont;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -75,7 +73,8 @@ h6 {
   font-weight: 400;
 }
 
-ul li {
+ul li,
+ol li {
   list-style: none;
 }
 
