--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,5 +1,3 @@
-@import "./variables";
-
 @mixin flexbox {
   display: -webkit-box;
   display: -moz-box;
@@ -27,8 +25,20 @@
   font-size: 18px;
   line-height: 27px;
 }
-
 // (end of) Default font
+
+// Button font
+@mixin buttonFont {
+  font-size: 14px;
+  line-height: 21px;
+
+  button {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 21px;
+  }
+}
+// (end of) Button font
 
 // Titles font
 @mixin titleFont {
