--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,9 +7,12 @@
 
   .inner {
     @include flexbox;
-    @include defaultFont;
     justify-content: space-between;
     align-items: center;
     padding: 24px 0;
+
+    .copy {
+      @include defaultFont;
+    }
   }
 }
