--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,6 +15,10 @@
   margin-bottom: 300px;
   padding: 47px 0 0;
 
+  @include tablet {
+    margin-bottom: 280px;
+  }
+
   .top {
     @include flexbox;
     justify-content: space-between;
@@ -35,6 +39,13 @@
       font-weight: 400;
       @include title72Font;
       text-transform: uppercase;
+
+      @include tablet {
+        font-size: 65px;
+        line-height: 70px;
+
+        margin-bottom: 10px;
+      }
     }
 
     .motto {
@@ -45,6 +56,11 @@
       text-transform: uppercase;
 
       margin-bottom: 30px;
+
+      @include tablet {
+        font-size: 30px;
+        line-height: 50px;
+      }
     }
 
     .text {
@@ -59,6 +75,10 @@
       width: 250px;
 
       margin: 70px 0 20px 66px;
+
+      @include tablet {
+        width: 180px;
+      }
     }
   }
 
@@ -66,5 +86,15 @@
     position: absolute;
     right: 0;
     top: 338px;
+
+    @include tablet {
+      top: 360px;
+
+      max-width: 690px;
+    }
+
+    .img {
+      max-width: 100%;
+    }
   }
 }
