--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,6 +22,10 @@ a:active {
 
   margin-bottom: 50px;
 
+  @include tablet {
+    margin-bottom: 35px;
+  }
+
   &::after {
     content: "";
     width: 80px;
