--- a/src/components/Benefits/Benefits.module.scss
+++ b/src/components/Benefits/Benefits.module.scss
@@ -14,6 +14,10 @@
         flex-basis: 100%;
       }
 
+      @include mobile {
+        display: none;
+      }
+
       .img {
         max-width: 100%;
       }
@@ -27,6 +31,10 @@
         margin-left: 30px;
       }
 
+      @include mobile {
+        margin-left: 0;
+      }
+
       .title {
         margin-left: 185px;
 
@@ -36,6 +44,10 @@
 
         @include tablet {
           margin-left: 90px;
+        }
+
+        @include mobile {
+          margin-left: 40px;
         }
       }
 
@@ -49,6 +61,10 @@
 
         @include tablet {
           padding: 23px 100px 30px 90px;
+        }
+
+        @include mobile {
+          padding: 23px 50px 30px 40px;
         }
 
         .item {
