--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -45,6 +45,10 @@ a:active {
     li {
       margin: 0 30px;
 
+      @include mobile {
+        margin: 0 20px;
+      }
+
       button {
         &::before {
           content: "";
@@ -52,6 +56,10 @@ a:active {
           height: 3px;
           opacity: 1;
           background-color: $grey;
+
+          @include mobile {
+            width: 30px;
+          }
         }
 
         &:hover,
