--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -13,6 +13,10 @@
       @include mobile {
         width: 45px;
       }
+
+      @include minimum {
+        display: none;
+      }
     }
   }
 
