--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -42,8 +42,13 @@ html,
 body {
   height: 100%;
   width: 100%;
+  max-width: 100%;
   min-width: $mw;
   position: relative;
+
+  @include mobile {
+    overflow-x: hidden;
+  }
 }
 
 body {
