--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -60,8 +60,7 @@
           margin: 0 auto;
 
           @include tablet {
-            font-size: 20px;
-            line-height: 24px;
+            @include defaultFontIncreased;
           }
         }
 
