--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -96,8 +96,7 @@
           position: absolute;
           left: 20px;
           font-weight: 400;
-          font-size: 36px;
-          line-height: 53px;
+          @include title36Font;
           color: $grey;
           transform: rotate(-90deg);
           transition: all 0.5s;
